disable auto-pausing videos when backgrounded, add Dart support for updating "now playing" widget/notification

--- a/packages/video_player/video_player/pubspec.yaml
+++ b/packages/video_player/video_player/pubspec.yaml
@@ -35,7 +35,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   pedantic: ^1.8.0
-  pigeon: 0.1.0-experimental.11
+  pigeon: ^0.1.17
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
