--- a/packages/video_player/video_player/android/build.gradle
+++ b/packages/video_player/video_player/android/build.gradle
@@ -39,9 +39,13 @@ android {
     }
 
     dependencies {
-        implementation 'com.google.android.exoplayer:exoplayer-core:2.11.4'
-        implementation 'com.google.android.exoplayer:exoplayer-hls:2.11.4'
-        implementation 'com.google.android.exoplayer:exoplayer-dash:2.11.4'
-        implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.11.4'
+        implementation 'com.google.android.exoplayer:exoplayer-core:2.11.7'
+        implementation 'com.google.android.exoplayer:exoplayer-hls:2.11.7'
+        implementation 'com.google.android.exoplayer:exoplayer-dash:2.11.7'
+        implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.11.7'
+        implementation 'com.google.android.exoplayer:exoplayer-ui:2.11.7'
+        implementation 'com.google.android.exoplayer:extension-mediasession:2.11.7'
+        implementation 'androidx.core:core:1.3.2'
+        implementation 'androidx.media:media:1.2.1'
     }
 }
